--- a/lib/premiere_ecoute_web/live/homepage_live.html.heex
+++ b/lib/premiere_ecoute_web/live/homepage_live.html.heex
@@ -341,6 +341,9 @@
             <h2 class="text-3xl font-bold text-white mb-4">
               {gettext("Everything you need for music discovery")}
             </h2>
+            <.button type="button" class="bg-red-400 hover:bg-red-500 text-red-800">
+              Click me!
+            </.button>
             <p class="text-lg" style="color: var(--color-dark-300);">
               {gettext("Join the community and explore music together")}
             </p>
